--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "exproose",
   "description": "Simple webapps with express + mongoose",
   "version": "0.0.1",
-  "private": true,
   "main": "./src/exproose",
   "engines": {
     "node": "0.10"
   },
   "dependencies": {
-    "async": "^0.9.0",
     "body-parser": "^1.11.0",
     "config": "^1.10.0",
     "express": "^4.11.2",
@@ -16,11 +14,9 @@
     "mongoose": "3.8.22",
     "node-rest-client": "^1.4.4",
     "rekuire": "^0.1.9",
-    "request": "^2.53.0",
     "require-directory": "^2.0.0",
     "sinon": "^1.12.2",
-    "sinon-chai": "^2.6.0",
-    "underscore": "^1.7.0"
+    "sinon-chai": "^2.6.0"
   },
   "devDependencies": {
     "chai": "*",
