--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "express": "^4.11.2",
     "mean-mock": "*",
     "mongoose": "3.8.22",
-    "node-rest-client": "^1.4.4",
     "rekuire": "^0.1.9",
     "require-directory": "^2.0.0",
+    "restler": "^3.2.2",
     "sinon": "^1.12.2",
     "sinon-chai": "^2.6.0"
   },
