--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "exproose",
   "description": "Simple webapps with express + mongoose",
   "version": "1.0.0",
+  "author": "Alejandro Tardin <alejandro@tardin.com>",
   "main": "./src/exproose",
+  "repository": "4lejandrito/exproose",
   "engines": {
     "node": "0.10"
   },
@@ -14,14 +16,14 @@
     "mongoose": "3.8.22",
     "rekuire": "^0.1.9",
     "require-directory": "^2.0.0",
-    "restler": "^3.2.2",
-    "sinon": "^1.12.2",
-    "sinon-chai": "^2.6.0"
+    "restler": "^3.2.2"
   },
   "devDependencies": {
     "chai": "*",
     "istanbul": "*",
-    "mocha": "*"
+    "mocha": "*",
+    "sinon": "^1.12.2",
+    "sinon-chai": "^2.6.0"
   },
   "scripts": {
     "test": "export NODE_ENV=test && mocha -R spec --recursive",
