--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   "devDependencies": {
     "chai": "*",
     "istanbul": "*",
+    "mocha-lcov-reporter": "0.0.1",
+    "coveralls": "2.10.0",
     "mocha": "*",
     "sinon": "^1.12.2",
     "sinon-chai": "^2.6.0"
   },
   "scripts": {
     "test": "export NODE_ENV=test && mocha -R spec --recursive",
-    "coverage": "export NODE_ENV=test && ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- -R spec --recursive"
+    "coverage": "export NODE_ENV=test && ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- -R spec --recursive",
+    "coveralls": "export NODE_ENV=test && ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --recursive && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   }
 }
