--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.11.0",
     "config": "^1.10.0",
+    "coveralls": "^2.11.2",
     "express": "^4.11.2",
     "mean-mock": "*",
     "mongoose": "3.8.22",
