--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.11.2",
     "mean-mock": "*",
     "mongoose": "3.8.22",
+    "passport": "^0.2.1",
+    "passport-http": "^0.2.2",
     "rekuire": "^0.1.9",
     "require-directory": "^2.0.0",
     "restler": "^3.2.2"
