Changed mongoose with monk

--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "config": "^1.10.0",
     "coveralls": "^2.11.2",
     "express": "^4.11.2",
+    "extend": "^2.0.0",
     "mean-mock": "*",
-    "mongoose": "3.8.22",
+    "monk": "^1.0.0",
     "passport": "^0.2.1",
     "passport-http": "^0.2.2",
     "rekuire": "^0.1.9",
